--- a/00_Python.ipynb
+++ b/00_Python.ipynb
@@ -110,7 +110,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 1.3.2 Markdown"
+    "### 1.3.1 Markdown"
    ]
   },
   {
@@ -126,7 +126,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 1.3.3 Mathjax"
+    "### 1.3.2 Mathjax"
    ]
   },
   {
@@ -143,7 +143,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 1.3.6 Soporte multimedia"
+    "### 1.3.3 Soporte multimedia"
    ]
   },
   {
@@ -227,7 +227,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 1.3.1 Completado mediantes Tabs"
+    "### 1.3.4 Completado mediantes Tabs"
    ]
   },
   {
@@ -252,7 +252,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 1.3.2 Buscando ayuda"
+    "### 1.3.5 Buscando ayuda"
    ]
   },
   {
@@ -365,7 +365,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 1.3.4 Magias (_magics_)"
+    "### 1.3.6 Magias (_magics_)"
    ]
   },
   {
@@ -698,7 +698,7 @@
    "source": [
     "En programación se le llama variable a un espacio en la memoria de la computadora que almacena un valor determinado y que tiene asociado un identificador (o nombre). Es este indentificador el que nos permite referirnos a ese valor y manipularlo. Dicho de forma más simple una variable es _esa cosa_ donde guardamos información para luego usar y que es posible llamar usando un nombre a nuestro gusto.\n",
     "\n",
-    "Los nombres de las variables en Python pueden contener los caracteres `a-z`, `A-Z`, `0-9` y algunos caracteres especiales como `_`. Los nombres de las variables NO pueden empezar con números. Por convención, los nombres de las variables comienzan con una letra minúscula, mientras que los nombres de las _clases_ (ver más adelante) comienzan con una letra mayúscula."
+    "Los nombres de las variables en Python pueden contener los caracteres `a-z`, `A-Z`, `0-9` y algunos caracteres especiales como `_`. Los nombres de las variables NO pueden empezar con números. Por convención, los nombres de las variables y funciones comienzan con una letra minúscula, mientras que los nombres de las _clases_ (ver más adelante) comienzan con una letra mayúscula."
    ]
   },
   {
@@ -4167,7 +4167,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 1.6 Lectura adicional"
+    "## 1.5 Lectura adicional"
    ]
   },
   {
