Refact de info curso y cambio ejemplo (flow diagram)  en  notebook 00

--- a/00_intro.ipynb
+++ b/00_intro.ipynb
@@ -7,83 +7,6 @@
     "# Curso de Capacitación y Extensión: Introducción a Programación Científica con Python\n",
     "\n",
     "\n",
-    "## Responsables \n",
-    "Dr. Osvaldo Martin\n",
-    "CONICET-IMASL\n",
-    "\n",
-    "Dr. Enrique Miranda\n",
-    "CONICET-IMASL / UNSL\n",
-    "\n",
-    "\n",
-    "## Fundamentos: \n",
-    "\n",
-    "* Python es un lenguaje de alto nivel y de propósito general, lo que significa que se puede usar para resolver casi cualquier problema. \n",
-    "* se han desarrollado un sinnúmero de librerías/herramientas que facilitan su aplicación en una amplia gama de disciplinas y problemas.\n",
-    "\n",
-    "* El término **programación científica** está relacionado a la utilización de _scripts_/programas orientados a la resolución analítica de un problema específico y formulado rigurosamente. \n",
-    "Algunos ejemplos son: \n",
-    "    - invocar funcionalidades de programas externos a través de lenguajes de alto nivel (como Python), \n",
-    "    - integrar aplicaciones (o _scripts_) en distintos lenguajes, \n",
-    "    - realizar análisis de datos, realizar limpieza y depuración de grandes datos, \n",
-    "    - utilizar expresiones regulares, parseo y análisis de información en formato texto, \n",
-    "    - simular sistemas dinámicos, \n",
-    "    - entre otras.\n",
-    "\n",
-    "Este curso propone brindar a los participantes una introducción a Python, un lenguaje ampliamente utilizado para programación científica.\n",
-    "\n",
-    "## Objetivos:\n",
-    "\n",
-    "Al finalizar el curso se espera que el participante sea capaz de:\n",
-    "\n",
-    "- Incorporar conceptos generales y elementos básicos de programación científica usando el lenguaje Python.\n",
-    "- Utilizar eficaz y eficientemente un enfoque basado en los principios de la programación científica para resolver problemas de diversa índole con Python.\n",
-    "- Diseñar, codificar y depurar programas de complejidad baja a moderada utilizando Python.\n",
-    "\n",
-    "\n",
-    "## Metodología y condiciones de aprobación:\n",
-    "\n",
-    "* Extensión: 20 horas cátedra.\n",
-    "* Requisitos de aprobación:\n",
-    "    * 90 % de asistencia al curso.\n",
-    "    * Aprobación de un trabajo práctico integrador.\n",
-    "\n",
-    "* Modalidad: clases teórico-prácticas\n",
-    "\n",
-    "\n",
-    "## Programa\n",
-    "\n",
-    "1. **Introducción a la Programación Científica.**\n",
-    "Actividades consideradas en el contexto de Programación Científica. Algunos paradigmas y lenguajes de programación más utilizados. Herramientas y entornos utilizados en el curso. \n",
-    "\n",
-    "2. **Introducción al lenguaje Python**\n",
-    "Breve introducción a Python. Génesis. Características del funcionamiento y procesamiento del lenguaje. Variables, expresiones y sentencias. Valores y tipos. Nombres de variables y palabras claves. Operadores y operandos. Strings. Comentarios.\n",
-    "\n",
-    "3. **Construcciones en Python**\n",
-    "Sentencias de selección. Sentencias de iteración. Funciones. Definición y usos. Composición. Flujo de ejecución. Parámetros y argumentos. Variables y parámetros locales. Uso de import y from.\n",
-    "\n",
-    "4. **Tipos de Datos Estructurados en Python**\n",
-    "Listas. Recorrido de listas. Operaciones sobre listas. Slices. Eliminación de elementos. Diccionarios. Iteraciones y diccionarios. Búsqueda inversa. Listas y diccionarios. Objetos mutables e inmutables. Tuplas. Asignación de tuplas. Tuplas como valores de retorno. Listas y tuplas. Diccionarios y tuplas. Comparación de tuplas. Manejo y operaciones sobre strings. \n",
-    "\n",
-    "5. **Manejo de Archivos**\n",
-    "Lectura y escritura. Operadores de formato. Nombres de archivos y paths. Captura de excepciones. \n",
-    "\n",
-    "6. **Programación orientada a objetos y librerías específicas de Programación Científica**\n",
-    "Características de la POO. Clases y objetos. Atributos. Métodos. Análisis de librerías de programación científica y sus facilidades: Numpy, Matplotlib, Pandas, entre otras.\n",
-    "\n",
-    "\n",
-    "## Bibliografía:\n",
-    "1. Allen B. Downey. Think Python. Segunda edición. O'Reilly Media 2015\n",
-    "2. Al Sweigart. Automate the Boring Stuff with Python: Practical Programming for Total Beginners. No Starch Press; 2015\n",
-    "3. Dusty Phillips. Python 3 Object-oriented Programming: Building robust and maintainable software with object oriented design patterns in Python. Tercera edición. Packt Publishing 2018.\n",
-    "4. Hans Petter Langtangen. A Primer on Scientific Programming with Python. Quinta edición. Springer. 2016\n",
-    "5. Jake VanderPlas. Python Data Science Handbook Tools and Techniques for Developers. O'Reilly Media. 2015\n",
-    "6. Luciano Ramalho. Fluent Python: Clear, Concise, and Effective Programming. O'Reilly Media. 2015\n",
-    "\n",
-    "\n",
-    "\n",
-    "# Introducción a la programación científica en Python\n",
-    "\n",
-    "\n",
     "El objetivo de este curso es enseñar los rudimentos del pensamiento en programación científica. Esto incluye\n",
     "\n",
     "* El manejo de un lenguaje formal de alto nivel, en nuestro caso Python.\n",
@@ -99,10 +22,10 @@
    "source": [
     "### Programas computacionales\n",
     "\n",
-    "Las computadoras pueden usarse para resolver problemas *del mundo real*. Esto se hace mediante el uso de algoritmos y programas computacionales. Un algoritmo es la descripción clara, detallada, no ambigua de la secuencia de pasos a seguir para obtener un resultado en particular. En un algoritmo quedan detalladas la secuencia de pasos que nos permite pasar de la entrada (input) a la salidad (output). Un algoritmo puede ser la descripción de un cómputo matemático como el cálculo de la raíz cuadrada, o resolver un sistema de ecuaciones, o puede ser un cómputo simbólico como buscar y reemplazar texto en un documento. La siguiente figura muestra, usando un diagrama de flujo, un algoritmo para computar el factorial de un número. \n",
+    "Las computadoras pueden usarse para resolver problemas *del mundo real*. Esto se hace mediante el uso de algoritmos y programas computacionales. Un algoritmo es la descripción clara, detallada, no ambigua de la secuencia de pasos a seguir para obtener un resultado en particular. En un algoritmo quedan detalladas la secuencia de pasos que nos permite pasar de la entrada (input) a la salidad (output). Un algoritmo puede ser la descripción de un cómputo matemático como el cálculo de la raíz cuadrada, o resolver un sistema de ecuaciones, o puede ser un cómputo simbólico como buscar y reemplazar texto en un documento. La siguiente figura muestra, usando un diagrama de flujo, un algoritmo para computar la raiz cuadrada de un número. \n",
     "\n",
     "\n",
-    " <img src=\"imagenes/factflow.gif\" width=\"250\">\n",
+    " <img src=\"imagenes/algo.png\" width=\"450\">\n",
     "\n",
     "La mayoría de los algoritmos se construyen a partir de los siguientes elementos:\n",
     "\n",
