--- a/01_Python_B.ipynb
+++ b/01_Python_B.ipynb
@@ -15,12 +15,12 @@
     "\n",
     "Una cadena es una secuencia de caracteres. Las cadenas son similares a las listas pero más específicas, ya que solo puede contener caracteres.\n",
     "\n",
-    "Para definir una cadena en Python usamos comillas simples `'` o dobles `\"`. Lo más común es usar comillas simples"
+    "Para definir una cadena en Python usamos comillas simples `'`, dobles `\"` o triples. Lo más común es usar comillas simples"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -29,7 +29,7 @@
        "'hola'"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -39,33 +39,68 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Las comillas triples son usadas cuando necesitamos escribir una cadena en varias lineas, como cuando vimos `docstrings`.\n",
-    "\n",
-    "Es posible indexar una cadena usando la misma sintaxis que la usada para las listas. Al igual que con las listas los índices empiezan en cero."
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'m'"
+       "str"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "cadena = 'hola mundo'\n",
-    "cadena[5]"
+    " type('hola')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Las comillas simples o dobles son totalmente equivalentes. Mientras que las triples son usadas cuando necesitamos escribir una cadena en varias lineas. Recuerden cuando vimos `docstrings`.\n",
+    "\n",
+    "Vamos usar  un aforismo de Jorge Wagensberg para ejemplificar como trabajar con cadenas bajo Python"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cadena = 'A más cómo, menos por qué'"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Como ya dijimos las listas y las cadenas comparten características, por ejmplo ambas pueden ser indexadas"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'á'"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cadena[3]"
    ]
   },
   {
@@ -77,16 +112,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'hola '"
+       "'A más'"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 80,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -96,184 +131,68 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Esto nos podría servir para crear una función que detecte palíndromos."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'odnum aloh'"
+       "True"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "cadena[::-1]"
+    "def es_palindromo(palabra):\n",
+    "    return palabra == palabra[::-1]\n",
+    "\n",
+    "es_palindromo('somos') # Luz azul"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Otra operación común con entre listas y cadenas es la función `len`, en el caso de las cadenas esta función devuelve el número de caracteres"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 55,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "10"
-      ]
-     },
-     "execution_count": 55,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "len(cadena)"
+    "Un problema con este función es que falla con frases como `Luz azul`. Hay dos razones para esto\n",
+    "\n",
+    "1. un espacio es un caracter válido para Python\n",
+    "2. las mayusculas son caracteres distintos a las minúsculas"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Las cadenas son además `iterables`"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 56,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "h,o,l,a, ,m,u,n,d,o,"
-     ]
-    }
-   ],
-   "source": [
-    "for c in cadena:\n",
-    "    print(c, end=',')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 57,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['h', 'o', 'l', 'a', ' ', 'm', 'u', 'n', 'd', 'o']"
-      ]
-     },
-     "execution_count": 57,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "[c for c in cadena]  # o de forma similar usando una lista por comprensión"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Una diferencia con las listas es que las cadenas son inmutables, es decir una vez creada no pueden ser modificacas. Por lo que siguiente operación es inválida"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 58,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "'str' object does not support item assignment",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-58-94d570ab4773>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mcadena\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m'f'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m: 'str' object does not support item assignment"
-     ]
-    }
-   ],
-   "source": [
-    "cadena[0] = 'f' "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "El error nos dice que el `objeto str` (en este caso `cadena`) no soporta la operación de asignación de item."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Métodos de cadenas\n",
+    "Python nos ofrece una herramienta muy potente para mejorar la función `es_palindromo`, los métodos de cadenas.\n",
     "\n",
     "Un método es similar a una función, pero con una sintáxis diferente. Cuando veamos programación orientada a objetos quedará claro su significado.\n",
     "\n",
-    "Las cadenas tienen muchos métodos, por ejemplo `upper` devuelve una nueva cadena donde todos los caractéres están en mayúsculas."
+    "Las cadenas tienen muchos métodos, por ejemplo `split` devuelve una lista de strings por defecto la lista es generada \"separando\" un strings cada vez que se encuentra un espacio en blanco."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'HOLA MUNDO'"
+       "['A', 'más', 'cómo,', 'menos', 'por', 'qué']"
       ]
      },
-     "execution_count": 28,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "cadena.upper()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Noten que la sintaxis no es `upper(cadena)`, como en una función si no que es `objeto.método()`.\n",
-    "\n",
-    "Otro método es `split`, el cual permite separar una cadena en una lista de caracteres. Por defecto el separardor es un espacio en blanco"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 30,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['hola', 'mundo']"
-      ]
-     },
-     "execution_count": 30,
+     "execution_count": 82,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -286,27 +205,323 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Pero podemos usar otros caracteres"
+    "Este comportamiento lo podemos cambiar pasando como argumento el caracter que queremos usar como separador."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['hol', ' mundo']"
+       "['A más cómo', ' menos por qué']"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 85,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "cadena.split('a')"
+    "cadena.split(',')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Otro método es `lower` que tiene como efecto devolver una nueva cadena donde todos los caracteres son minúsculas"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'luz azul'"
+      ]
+     },
+     "execution_count": 88,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "'LuZ AzUl'.lower()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "otro método es replace que nos permite reeplazar caracteres, incluso podemos reemplazar un espacio en blanco por nada."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Luzazul'"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "'Luz azul'.replace(' ', '')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Combinando estos dos últimos métodos podemos crear una versión más versatil de `es_palindromo`."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def es_palindromo(palabra):\n",
+    "    nueva_palabra = palabra.lower().replace(' ', '')  # es posible concatenar métodos\n",
+    "    return nueva_palabra == nueva_palabra[::-1]\n",
+    "\n",
+    "es_palindromo('Luz azul')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Podríamos querer que la función `es_palindromo` nos devuelva un mensaje más amigable que True o False. Una opción que la función no devuelva ningún valor si no que imprima un mensaje, por ejemplo"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Luz azul es palíndromo\n"
+     ]
+    }
+   ],
+   "source": [
+    "def es_palindromo(palabra):\n",
+    "    nueva_palabra = palabra.lower().replace(' ', '')\n",
+    "    if nueva_palabra == nueva_palabra[::-1]:\n",
+    "        print(f'{palabra} es un palíndromo')\n",
+    "    else:\n",
+    "        print(f'{palabra} no es un palíndromo')\n",
+    "        \n",
+    "es_palindromo('Luz azul')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "El ejemplo anterior anterior muestra lo que se llama formateo de cadenas, hay varias formas de dar formato a cadenas (referencia), en el ejeplo anterior hemos usado lo que se conoce como f-strings, que es la forma más nueva (solo funciona en Python 3.6 en adelante). Las f-strings nos permite crear strings usando variables (en este caso la variable `palabra`) y también nos permite pasar expresiones de Python y darle formato a las al resultado de esas expresiones, como se puede ver en el siguiente ejemplo."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Luz azul es un palíndromo de 007 caracteres\n"
+     ]
+    }
+   ],
+   "source": [
+    "def es_palindromo(palabra):\n",
+    "    nueva_palabra = palabra.lower().replace(' ', '')\n",
+    "    if nueva_palabra == nueva_palabra[::-1]:\n",
+    "        print(f'{palabra} es un palíndromo de {len(nueva_palabra):03d} caracteres')\n",
+    "    else:\n",
+    "        print(f'{palabra} no es un palíndromo')\n",
+    "        \n",
+    "es_palindromo('Luz azul')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Fijense que `len()` funciona con las cadenas igual que con las listas. el formato `03d`, quiere decir que la variable es un entero (d) y que use 3 espacios para representar a ese entero. Si no hay suficientes dígitos complete con ceros. Existen varias otras opciones para dar formato como:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'3.14'"
+      ]
+     },
+     "execution_count": 68,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "f'{3.1415:.2f}'"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Las cadenas son iterables (al igual que las listas). Por ejemplo si estuvieramos interesados en saber la frecuencia con la que aparecen caracteres en una cadena podríamo escribir."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 121,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a aparece 1 veces\n",
+      "m aparece 3 veces\n",
+      "á aparece 1 veces\n",
+      "s aparece 2 veces\n",
+      "c aparece 1 veces\n",
+      "ó aparece 1 veces\n",
+      "o aparece 3 veces\n",
+      ", aparece 1 veces\n",
+      "e aparece 1 veces\n",
+      "n aparece 1 veces\n",
+      "p aparece 1 veces\n",
+      "r aparece 1 veces\n",
+      "q aparece 1 veces\n",
+      "u aparece 1 veces\n",
+      "é aparece 1 veces\n"
+     ]
+    }
+   ],
+   "source": [
+    "def frecuencia(cadena):\n",
+    "    visto = []\n",
+    "    cadena_nueva = cadena.lower().replace(' ', '')\n",
+    "    for c in cadena_nueva:\n",
+    "        if c not in visto:\n",
+    "            print(f'{c} aparece {cadena_nueva.count(c)} veces')\n",
+    "            visto.append(c)\n",
+    "\n",
+    "frecuencia(cadena)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Podemos mejorar algunos aspectos de esta función, por ejemplo unificar caracteres con y sin tilde. y eliminar signos de puntuación no solo espacios en blanco. Para ello vamos a usar el método `maketrans` que nos permite crear una tabla de correspondencia entre el primer y segundo argumento. El tercer argumento indica los caracteres que sean reemplazados por nada. Otro truco de la siguiente función es que usa \"vez\" y \"veces\" según corresponda (queda como ejercicio explicar como se logra esto)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 123,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a aparece 2 veces\n",
+      "m aparece 3 veces\n",
+      "s aparece 2 veces\n",
+      "c aparece 1 vez\n",
+      "o aparece 4 veces\n",
+      "e aparece 2 veces\n",
+      "n aparece 1 vez\n",
+      "p aparece 1 vez\n",
+      "r aparece 1 vez\n",
+      "q aparece 1 vez\n",
+      "u aparece 1 vez\n"
+     ]
+    }
+   ],
+   "source": [
+    "def frecuencia(cadena):\n",
+    "    visto = []\n",
+    "    trans = str.maketrans('áéíóúü','aeiouu', ':,. ')\n",
+    "    cadena_nueva = cadena.lower().translate(trans)\n",
+    "    for c in cadena_nueva:\n",
+    "        if c not in visto:\n",
+    "            cantidad = cadena_nueva.count(c)\n",
+    "            d = 'vez' if cantidad == 1  else 'veces'\n",
+    "            print(f'{c} aparece {cantidad} {d}')\n",
+    "            visto.append(c)\n",
+    "            \n",
+    "\n",
+    "frecuencia(cadena)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Una diferencia con las listas es que las cadenas son inmutables, es decir una vez creada no pueden ser modificacas. Por lo que siguiente operación es inválida"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cadena[0] = 'f' "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "El error nos dice que el `objeto str` (en este caso `cadena`) no soporta la operación de asignación de item."
    ]
   },
   {
@@ -505,80 +720,6 @@
     "\n",
     "in_both('peras', 'manzanas')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 46,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "False"
-      ]
-     },
-     "execution_count": 46,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "cadena == 'banana'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 61,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 61,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "'casa' < 'caza'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 69,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'hola mundo!!!'"
-      ]
-     },
-     "execution_count": 69,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "cadena + '!' * 3"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
