borrador cadenas, tuplas, diccionarios

--- a/01_Python_C.ipynb
+++ b/01_Python_C.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -24,7 +24,7 @@
        "dict"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -52,7 +52,7 @@
        "{'Santiago': 'Maldonado'}"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -201,7 +201,7 @@
    "source": [
     "Si prestan atención verán que el orden en que iteramos los elementos del diccionario es exactamente el mismo orden en el que creamos el diccionario. Este es el mismo comportamiento que para una lista, por lo cual puede ser exactamente lo que estaban esperando. Pero cabe aclarar que en versiones anteriores a Python 3.7 este comportamiento NO estaba garantizado y el orden dependía de varios factores.\n",
     "\n",
-    "Si la ejecución correcta del código que están escribiendo depende del orden de un diccionario asegurense de estar usando Python >= 3.7. Y asegurensé de aclarlo en caso que un tercero vaya a correr el código. Una alternativa que funciona con versiones previas de Python (a partir de 3.1) es usar [OrderedDict](https://docs.python.org/3.7/library/collections.html#collections.OrderedDict)."
+    "Si la ejecución correcta del código que están escribiendo depende del orden de un diccionario asegurense de estar usando Python >= 3.7. Y asegurensé de aclararlo en caso que un tercero vaya a utilizar el código. Una alternativa que funciona con versiones previas de Python (a partir de 3.1) es usar [OrderedDict](https://docs.python.org/3.7/library/collections.html#collections.OrderedDict)."
    ]
   },
   {
@@ -29792,26 +29792,17 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "### Frecuencias\n",
     "\n",
-    "Es común usar _estadísticos_ como la media y la _desviación estándar_ para resumir (o comprimir) un conjunto de datos. Esto proceso de compresión de información puede conducir a la pérdida de información útil, por lo que suele ser buena idea usar otras formas de representar datos, una muy común es mediante histogramas.\n",
-    "\n",
-    "Un histograma es una representación visual que muestra el número de veces que aparece un número es un conjunto de datos (frecuencia). En el próximo capítulo veremos como hacer este tipo de gráficos. Pero antes de llegar a graficar veamos como podemos usar un diccionario para calcular estas frecuencias. Supongamos que tenemos una lista de valores como la siguiente"
+    "En el notebook anterior vimos como crear una función llamada `frecuencia` que nos permitía contar cuantas veces aparecía un determinado caracter en un cadena. Ahora vamos a ver una versión alternativa de esa función. Esta vez usando diccionarios."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29827,7 +29818,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29845,7 +29836,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -29854,7 +29845,7 @@
        "{1: 1, 2: 2, 3: 1, 4: 1, 5: 1}"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -29873,7 +29864,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -29917,7 +29908,7 @@
        " 'Ë': 1}"
       ]
      },
-     "execution_count": 114,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -29929,13 +29920,6 @@
     "for linea in archivo.readlines()[1:]:\n",
     "    nombres += linea.split(';')[0]\n",
     "frecuencias(nombres)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Una ventaja de usar un diccionario como usamos en la función frecuencia es que no necesitamos saber _a priori_ los caracteres que nos interesa. "
    ]
   },
   {
