--- a/01_Python_B.ipynb
+++ b/01_Python_B.ipynb
@@ -57,7 +57,7 @@
    "source": [
     "Las comillas simples o dobles son totalmente equivalentes. Mientras que las triples son usadas cuando necesitamos escribir una cadena en varias lineas. Recuerden cuando vimos `docstrings`.\n",
     "\n",
-    "Vamos usar  un aforismo de Jorge Wagensberg para ejemplificar como trabajar con cadenas bajo Python"
+    "Vamos a usar un aforismo de Jorge Wagensberg para ejemplificar como trabajar con cadenas bajo Python"
    ]
   },
   {
@@ -66,14 +66,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cadena = 'A más cómo, menos por qué'"
+    "aforismo = 'A más cómo, menos por qué'"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Como ya dijimos las listas y las cadenas comparten características, por ejmplo ambas pueden ser indexadas"
+    "Como ya dijimos las listas y las cadenas comparten características, por ejemplo ambas pueden ser indexadas"
    ]
   },
   {
@@ -93,7 +93,7 @@
     }
    ],
    "source": [
-    "cadena[3]"
+    "aforismo[3]"
    ]
   },
   {
@@ -120,7 +120,7 @@
     }
    ],
    "source": [
-    "cadena[:5]"
+    "aforismo[:5]"
    ]
   },
   {
@@ -191,7 +191,7 @@
     }
    ],
    "source": [
-    "cadena.split()"
+    "aforismo.split()"
    ]
   },
   {
@@ -218,7 +218,7 @@
     }
    ],
    "source": [
-    "cadena.split(',')"
+    "aforismo.split(',')"
    ]
   },
   {
@@ -408,24 +408,14 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "a aparece 1 veces\n",
-      "m aparece 3 veces\n",
-      "á aparece 1 veces\n",
-      "s aparece 2 veces\n",
-      "c aparece 1 veces\n",
-      "ó aparece 1 veces\n",
-      "o aparece 3 veces\n",
-      ", aparece 1 veces\n",
-      "e aparece 1 veces\n",
-      "n aparece 1 veces\n",
-      "p aparece 1 veces\n",
-      "r aparece 1 veces\n",
-      "q aparece 1 veces\n",
-      "u aparece 1 veces\n",
-      "é aparece 1 veces\n"
+     "ename": "NameError",
+     "evalue": "name 'cadena' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-15-fdc722c8459a>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      7\u001b[0m             \u001b[0mvisto\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mc\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 9\u001b[0;31m \u001b[0mfrecuencia\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcadena\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'cadena' is not defined"
      ]
     }
    ],
@@ -454,20 +444,14 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "a aparece 2 veces\n",
-      "m aparece 3 veces\n",
-      "s aparece 2 veces\n",
-      "c aparece 1 vez\n",
-      "o aparece 4 veces\n",
-      "e aparece 2 veces\n",
-      "n aparece 1 vez\n",
-      "p aparece 1 vez\n",
-      "r aparece 1 vez\n",
-      "q aparece 1 vez\n",
-      "u aparece 1 vez\n"
+     "ename": "NameError",
+     "evalue": "name 'cadena' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-16-7cf555b620a2>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     11\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     12\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 13\u001b[0;31m \u001b[0mfrecuencia\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcadena\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'cadena' is not defined"
      ]
     }
    ],
@@ -500,14 +484,14 @@
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "'str' object does not support item assignment",
+     "ename": "NameError",
+     "evalue": "name 'cadena' is not defined",
      "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
       "\u001b[0;32m<ipython-input-17-94d570ab4773>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mcadena\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m'f'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m: 'str' object does not support item assignment"
+      "\u001b[0;31mNameError\u001b[0m: name 'cadena' is not defined"
      ]
     }
    ],
@@ -630,14 +614,15 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 22,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'cadena' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-22-203c4c69e550>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 8\u001b[0;31m \u001b[0mes_acentuada\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcadena\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'cadena' is not defined"
+     ]
     }
    ],
    "source": [
@@ -657,7 +642,7 @@
    "source": [
     "# Tuplas\n",
     "\n",
-    "Una tupla es una colección de valores, los valores pueden ser de cualquier tipo en ese sentido las tuplas se parecen a las listas, pero las tuplas son inmutables y en ese sentido se parecen a las cadenas.\n",
+    "Una tupla es una secuencia de valores, los valores pueden ser de cualquier tipo en ese sentido las tuplas se parecen a las listas, pero las tuplas son inmutables y en ese sentido se parecen a las cadenas.\n",
     "\n",
     "La sintáxis de las tuplas es muy simple, basta escribir valores separados por comas"
    ]
@@ -687,7 +672,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Aunque no es necesario es común encerrar una tupla entre paréntesis"
+    "Aunque no es necesario, es muy común usar paréntesis para delimitar una tupla:"
    ]
   },
   {
@@ -703,7 +688,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Ambas formas son equivalentes:"
+    "Como podemos ver ambas formas son equivalentes:"
    ]
   },
   {
@@ -751,7 +736,7 @@
    ],
    "source": [
     "t1 = 42,  # esto es una tupla\n",
-    "t2 = (42) # esto NO una tupla, es un entero\n",
+    "t2 = (42)  # esto NO es una tupla, es un entero\n",
     "\n",
     "type(t1), type(t2)"
    ]
@@ -891,7 +876,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Las tuplas aparecen todo el tiempo en Python, sucede que son tan simples que suelen _pasar desaperbidas_. Por ejmplo al escribir:"
+    "Las tuplas aparecen todo el tiempo en Python, sucede que son tan simples que suelen _pasar desaperbidas_. Por ejemplo al escribir: asdF"
    ]
   },
   {
@@ -1086,7 +1071,7 @@
     }
    ],
    "source": [
-    "imprima_todos(42, ['3'], cadena)  # esto funciona (3 argumentos)"
+    "imprima_todos(42, ['3'], aforismo)  # esto funciona (3 argumentos)"
    ]
   },
   {
@@ -1103,7 +1088,7 @@
     }
    ],
    "source": [
-    "imprima_todos(cadena)  # esto también (1 argumento)"
+    "imprima_todos(aforismo)  # esto también (1 argumento)"
    ]
   },
   {
@@ -1148,7 +1133,7 @@
     {
      "data": {
       "text/plain": [
-       "<zip at 0x7fad4d490f48>"
+       "<zip at 0x7f8f3822e588>"
       ]
      },
      "execution_count": 43,
@@ -1195,15 +1180,14 @@
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'has_match' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-45-6d1a1cf182c8>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      5\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0;32mFalse\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 7\u001b[0;31m \u001b[0mhas_match\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mt1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mt2\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m: name 'has_match' is not defined"
-     ]
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -1213,7 +1197,7 @@
     "            return True\n",
     "    return False\n",
     "\n",
-    "has_match(t1, t2)"
+    "se_ha_formado_una_pareja(t1, t2)"
    ]
   },
   {
@@ -1224,12 +1208,27 @@
     "\n",
     "1. Escriba una función que tome una cadena como argumentos y muestre las letras de esa cadena una por una, empezando por la última letra y terminado en la primera.\n",
     "\n",
-    "2. Existen muchos otros métodos que se pueden aplicar a cadenas. Determine que hacen los sigueintes métodos\n",
+    " \n",
+    "2. Si `sr_loop` es una cadena cual es el resultado de las siguientes operaciónes:\n",
+    "    1. `sr_loop[:]`\n",
+    "    2. `sr_loop[1::2]`\n",
+    "    3. `sr_loop[10:] = '7'`\n",
+    "    \n",
+    "3. Repita el punto anterior asumiento que `sr_loop` es una tupla y luego asumiendo que `sr_loop` es una lista. Para este último caso, pruebe además la operación `sr_loop[10:] = 7`\n",
+    "4. Existen muchos otros métodos que se pueden aplicar a cadenas. Determine que hacen los siguientes métodos\n",
     "    * `isalpha`\n",
     "    * `isalnum`\n",
     "    * `isnumeric`\n",
     "    * `startswith`\n",
-    "    * `join`"
+    "    * `join`\n",
+    "    \n",
+    "5. En criptografía, el [cifrado César](https://es.wikipedia.org/wiki/Cifrado_C%C3%A9sar) es una de las técnicas de cifrado más simples y más usadas. Es un tipo de cifrado en el que una letra en el texto original es reemplazada por otra letra que se encuentra un número fijo de posiciones más adelante en el alfabeto. Por ejemplo, con un desplazamiento de 3, la A sería sustituida por la D (situada 3 lugares a la derecha de la A), la B sería reemplazada por la E, etc.\n",
+    "\n",
+    "![cesar](imagenes/Cesar.png)\n",
+    "\n",
+    "Escriba una función que permita cifrar y descifrar cadenas usando el cifrado Cesar con un número arbitrario de posiciones. Dos funciones incluidas con Python que pueden ser útiles para esta tarea son `ord`, que convierte caracteres numéricos a números y `chr` que realiza la operación inversa.\n",
+    "\n",
+    "6."
    ]
   }
  ],
