Agregado notebook 2 + cambio de nombres notebooks extra ('Otros') (#4)
* Agregado clase 2 + cambio de nombres notebooks 'otros'

* Delte Checkpoints folders

* Merge notebooks 1 & 2.Change strategy: 'Problem oriented'

* Alteraciones notebook Intro

--- a/00_intro.ipynb
+++ b/00_intro.ipynb
@@ -46,7 +46,7 @@
     "\n",
     "En programación científica, especialmente en Python, se suele usar código de 3 modos relacionados:\n",
     "\n",
-    "* **Interactivo**: Esto es común en tareas exploratorias, cuando aún no tenemos del todo definido el problema. Por ejemplo tenemos un conjunto de datos en uno o más archivos y necesitamos saber que información contienen, quizá hacer algún gráfico o buscar palabras claves.\n",
+    "* **Interactivo**: Esto es común en tareas exploratorias, cuando aún no tenemos del todo definido el problema. Por ejemplo tenemos un conjunto de datos en uno o más archivos y necesitamos saber que información contienen, quizá hacer algún gráfico o buscar palabras claves. Por ejemplo, usando la terminal, Jupyter Notebooks, compiladores online, etc.\n",
     "\n",
     "\n",
     "* **Scripts**: Los scripts (del inglés guión) se refiere a pequeños programas que se usan para tareas sencillas, generalmente cuando queremos automatizar tareas como hacer una copia de respaldo (_back-up_) semanal, o descargar información de una página cada vez que se actualice cierta información. A veces estos *scripts* se usan como *\"pegamento\"* para concatenar programas, generalmente cuando estos programas son complejos o no tenemos acceso al código fuente (o no entendemos el código fuente).\n",
@@ -699,7 +699,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
